# RustWebRTC

./: .gitignore  Cargo.toml  README.md  http_server.py  video.ivf
src/: main.rs  signaling.rs
src/brain/: queue.rs
src/model-client/: main.rs
src/scripts/: convert_ivf.sh
static/: app.js  index.html
