[package]
name = "webrtc_app"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.6"  # Replace with the correct version of webrtc-rs or your WebRTC library
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
tracing = "0.1"
tokio-tungstenite = "0.16"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
url = "2.5.2"
log = "0.4"
env_logger = "0.10" 
anyhow = "1.0"

[[bin]]
name = "signaling_server"
path = "src/main.rs"

[[bin]]
name = "model_client"
path = "src/model-client/main.rs"
