[package]
name = "webrtc_app"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }  # Add uuid with v4 feature for random UUID generation







